--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="./src/scripts/main.js" defer></script>
     <title>PF Windbnd Vanilla</title>
   </head>
-  <body>
+  <body class="bg-gray-50 dark:bg-gray-900 min-h-screen transition-colors">
     <header
       id="header"
       class="px-4 md:px-16 pt-4 md:flex md:items-center md:justify-between">
@@ -53,8 +53,16 @@
       </button>
     </header>
     <div id="title-container" class="px-4 md:px-16 pt-6 flex justify-between items-center ">
-      <h3 class="text-2xl font-bold" style="font-family: 'Montserrat', sans-serif;">Stays in Finland</h3>
-      <p id="stays-count" class="text-gray-500 text-sm" style="font-family: 'Mulish', sans-serif;">12+ stays</p>
+      <h3 class="text-2xl font-bold dark:text-white" style="font-family: 'Montserrat', sans-serif;">Stays in Finland</h3>
+      <p id="stays-count" class="text-gray-500 dark:text-gray-400 text-sm" style="font-family: 'Mulish', sans-serif;">12+ stays</p>
+    </div>
+    <div class="px-4 md:px-16 pt-4 flex justify-end">
+      <button id="sort-rating-btn" class="flex items-center space-x-2 text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200 transition-colors">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4"/>
+        </svg>
+        <span class="text-sm" style="font-family: 'Mulish', sans-serif;">Sort by rating</span>
+      </button>
     </div>
     <div id="cards-container" class="px-4 md:px-16 pt-4">
       <div
@@ -175,6 +183,19 @@
       </div>
     </div>
     
+    <!-- Botón Dark Mode -->
+    <div class="px-4 md:px-16 py-8 flex justify-start">
+      <button id="dark-mode-toggle" class="relative w-16 h-8 rounded-full bg-gray-300 transition-all duration-300 focus:outline-none">
+        <div class="absolute top-1 left-1 w-6 h-6 bg-white rounded-full shadow-md transform transition-transform duration-300 flex items-center justify-center">
+          <svg id="sun-icon" class="w-4 h-4 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"/>
+          </svg>
+          <svg id="moon-icon" class="w-4 h-4 text-blue-400 hidden" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"/>
+          </svg>
+        </div>
+      </button>
+    </div>
 
     
   </body>
